move from DX9 to DX11
compile as d3d11.dll & hook device create
add fake client from imgui sample as internal test

--- a/fake_client/fake_client.vcxproj.filters
+++ b/fake_client/fake_client.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="fake_client.cpp">
       <Filter>sources</Filter>
     </ClCompile>
+    <ClCompile Include="dx11_win.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
