--- a/loader_core/loader_core.vcxproj
+++ b/loader_core/loader_core.vcxproj
@@ -120,7 +120,7 @@ xcopy "$(TargetPath)" "$(GW2_INSTALL_DIR)\" /Y
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ModuleDefinitionFile>deffile</ModuleDefinitionFile>
+      <ModuleDefinitionFile>deffile.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
       <Command>IF DEFINED GW2_INSTALL_DIR (
@@ -168,7 +168,7 @@ xcopy "$(TargetPath)" "$(GW2_INSTALL_DIR)\" /Y
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ModuleDefinitionFile>deffile</ModuleDefinitionFile>
+      <ModuleDefinitionFile>deffile.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
       <Command>IF DEFINED GW2_INSTALL_DIR (
@@ -204,7 +204,7 @@ xcopy "$(TargetPath)" "$(GW2_INSTALL_DIR)\" /Y
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="deffile" />
+    <None Include="deffile.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
