--- a/loader_core/loader_core.vcxproj.filters
+++ b/loader_core/loader_core.vcxproj.filters
@@ -62,6 +62,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="deffile" />
+    <None Include="deffile.def" />
   </ItemGroup>
 </Project>
